update in class fooder

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="hide">0799 799 514</div>
         </div>
         
-        <p>Copyright @StefanM55 via TheOdinProject</p>
+        <p>Copyright @StefanM55</p>
     </div>
 
 </body>
