now container0 is responsive

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             Profile
         </div>
         <div class="quoteintro">
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;At the moment working in engineering since January 2017, where I had been always implicated in project launching. The information flow and prioritizing the tasks come natural for me, also the fast paced learning and problem solving skills.
-                <br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I want to make a path change and start my developer career.
-                <br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The programming history for me starts since high-school from where I have a WebSites Management Certificate and recently I've reconnected with this industry, as I've created little projects with CSS, HTML, JavaScript and REACT. Also I am not stranger to TypeScript, BootStrap, Nest.js and GraphQL + learned GIT and Linux.
-                <br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In this Resume I've included only the IT related projects, as my full resume can be found on LinkedIn: <a href="https://www.linkedin.com/in/stefanmiloiuengineer/"> https://www.linkedin.com/in/stefanmiloiuengineer/</a>
+            <p id="paraquote">At the moment working in engineering since January 2017, where I had been always implicated in project launching. The information flow and prioritizing the tasks come natural for me, also the fast paced learning and problem solving skills.
+                I want to make a path change and start my developer career.
+                The programming history for me starts since high-school from where I have a WebSites Management Certificate and recently I've reconnected with this industry, as I've created little projects with CSS, HTML, JavaScript and REACT. Also I am not stranger to TypeScript, BootStrap, Nest.js and GraphQL + learned GIT and Linux.
+                In this Resume I've included only the IT related projects, as my full resume can be found on LinkedIn: <a href="https://www.linkedin.com/in/stefanmiloiuengineer/"> https://www.linkedin.com/in/stefanmiloiuengineer/</a>
             </p>
         </div>
     </div>
